--- a/recipes.html
+++ b/recipes.html
@@ -6,7 +6,7 @@
     <title>Recipes</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main-content">Skip to Main Content</a>
     <header>
 		<!-- Nav is a sematic tag page that aids accessibility -->
 		<nav>
@@ -22,7 +22,7 @@
 		<h1>Recipes</h1>
 	</header>
    
-    <main>
+    <main id="main-content">
     <div>
         <h2>Double Chocolate Cookies</h2>
         <span>Origin: Michigan</span>
