--- a/travel.html
+++ b/travel.html
@@ -6,7 +6,7 @@
     <title>Travel</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main-content">Skip to Main Content</a>
     <header>
 		<!-- Nav is a sematic tag page that aids accessibility -->
 		<nav>
@@ -22,7 +22,7 @@
 		<h1>Travel</h1>
 	</header>
    
-    <main>
+    <main id="main-content">
         <div>
             <h2>Yellowstone</h2>
     
