--- a/recipes.html
+++ b/recipes.html
@@ -13,7 +13,7 @@
 			<ul>
 				<!-- Since I am on the index file I added class = action to the link to index. -->
 				<!-- For this homework leave the class on index for all three pages. -->
-				<li class="active"><a href = "recipes.html">Receipts</li>
+				<li class="active"><a href = "recipes.html">Recipes</a></li>
 				<li><a href = "index.html" >Pets</a></li>
 				<li><a href = "travel.html">Travel</a></li>
 			</ul>
