--- a/travel.html
+++ b/travel.html
@@ -13,9 +13,9 @@
 			<ul>
 				<!-- Since I am on the index file I added class = action to the link to index. -->
 				<!-- For this homework leave the class on index for all three pages. -->
-				<li class="active"><a href = "travel.html">Travel</li>
+				<li class="active"><a href = "travel.html">Travel</a></li>
 				<li><a href = "index.html" >Pets</a></li>
-				<li><a href = "recipes.html">Receipts</a></li>
+				<li><a href = "recipes.html">Recipes</a></li>
 			</ul>
 		</nav>
 		<!-- The h1 is a semantic tag that aids accessibility -->
