--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    <div class="skip"><a href = "#main-content">Skip to Main Content</a></div>
     <!-- Header is a sematic tag page that aids readability -->
 	<header>
 		<!-- Nav is a sematic tag page that aids accessibility -->
@@ -16,8 +16,8 @@
 			<ul>
 				<!-- Since I am on the index file I added class = action to the link to index. -->
 				<!-- For this homework leave the class on index for all three pages. -->
-				<li class="active"><a href = "index.html" >Pets</a></li>
-				<li><a href = "recipes.html">Receipts</a></li>
+				<li class="active"><a class = "current" href = "index.html" >Pets</a></li>
+				<li><a href = "recipes.html">Recipes</a></li>
 				<li><a href = "travel.html">Travel</a></li>
 			</ul>
 		</nav>
@@ -27,12 +27,12 @@
     <main id="main-content">
         <div>
             <h2>Bacon Q Dog</h2>
-            <img src="images/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img class="pet-first-pic" src="images/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
 
             <p>Bacon Q. Dog is a 9yr old labradoodle. He prefers to spend his days lounging among the three different beds/couches that his family has gifted him. He enjoys a walk or two around the neighborhood, as long as he can pretend that he doesn't see any of the other animals to avoid the embarrassment of not wanting to admit he has no wolf-like skills in chasing them.</p> 
             <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his energy. He will place his toys on a mini couch and frantically drag the couch around, giving his toys "a ride." There is also a lot of rolling. Lots and lots of rolling.</P>
             <h3>Photo Gallery</h3>
-            <div class="grid-container">
+            <div class="grid-container-pets">
                 <img src="images/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana">
                 <img src="images/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
                 <video width="200"  controls>
@@ -53,15 +53,17 @@
         </div>
         <div>
             <h2>Juno</h2>
-            <img src="images/classic_juno.JPG" width = "400" alt="Black and brown dog asleep on his side">
+            <img class="pet-first-pic" src="images/classic_juno.JPG" width = "400" alt="Black and brown dog asleep on his side">
 
             <p>No one knows exactly what breed Juno is, but that makes him all the more special. He was adopted before he was one year old; despite this and his German shepherd-esque looks, he stayed close to the same size, hovering around 50 lbs into adulthood. At the weathered age of ten years old, Juno is dealing with hip problems, but manages to stay in good spirits.</p> 
             <P>One of Juno’s favorite pastimes is finding the dirtiest puddle within a one-mile radius and making sure every inch of him makes contact with said puddle. If rolling around in dirt was an Olympic sport, Juno would have been the one that facilitated its inclusion into the Olympics. </P>
             <h3>Photo Gallery</h3>
-            <img src="images/juno_pup.JPG" width ="200" alt = "A young black and brown dog with his tongue hanging out">
-            <img src="images/juno_laying.JPG"  width ="200" alt="A black and brown dog laying on a rug">
-            <img src="images/juno_laying_2.JPG"  width ="200" alt="A black and brown dog laying on a wood floor">
-            <img src="images/juno_profile.JPG"  width ="200" alt="A profile perspective of a black and brown dog from shoulders up">
+            <div class="grid-container-pets">
+                <img src="images/juno_pup.JPG" width ="200" alt = "A young black and brown dog with his tongue hanging out">
+                <img src="images/juno_laying.JPG"  width ="200" alt="A black and brown dog laying on a rug">
+                <img src="images/juno_laying_2.JPG"  width ="200" alt="A black and brown dog laying on a wood floor">
+                <img src="images/juno_profile.JPG"  width ="200" alt="A profile perspective of a black and brown dog from shoulders up">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Human food</li>
@@ -72,15 +74,17 @@
         </div>
         <div>
             <h2>Chako</h2>
-            <img src="images/Chako1.jpg" width = "400" alt="Black and Tan color Shiba Inu">
+            <img class="pet-first-pic" src="images/Chako1.jpg" width = "400" alt="Black and Tan color Shiba Inu">
 
             <p>With a coat as dark as midnight but eyes as bright as stars, he seemed to embody both the mystery and the exuberance of life itself. Agile and playful, he danced around the park as if the grass were his personal stage, captivating everyone with his vivacity.</p> 
             <P>Yet, when at home, Chako transformed into a zen master. He would curl up on his favorite rug, eyes half-closed in contemplation, as if solving the great puzzles of the universe. Both spirited and serene, Mochi was a living testament to the richness of dualities, teaching his human companions that one could be many things all at once.</P>
             <h3>Photo Gallery</h3>
-            <img src="images/Chako2.jpg" width ="200" alt = "Chako is lazy but still wants to look outside.">
-            <img src="images/Chako3.jpg"  width ="200" alt="A black and brown dog laying on a rug">
-            <img src="images/Chako4.jpg"  width ="200" alt="Chako doesn't want to move, so he sits there and watches.">
-            <img src="images/Chako5.jpg"  width ="200" alt="Chako loves comfortable beds.">
+            <div class="grid-container-pets">
+                <img src="images/Chako2.jpg" width ="200" alt = "Chako is lazy but still wants to look outside.">
+                <img src="images/Chako3.jpg"  width ="200" alt="A black and brown dog laying on a rug">
+                <img src="images/Chako4.jpg"  width ="200" alt="Chako doesn't want to move, so he sits there and watches.">
+                <img src="images/Chako5.jpg"  width ="200" alt="Chako loves comfortable beds.">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Sleep</li>
@@ -91,15 +95,17 @@
         </div>
         <div>
             <h2>Peddie</h2>
-            <img src="images/peddie.jpg" width = "400" alt="A cute naughty golden retriever">
+            <img class="pet-first-pic" src="images/peddie.jpg" width = "400" alt="A cute naughty golden retriever">
 
             <p>Peddie, the Golden Retriever, is a charming and lively companion known for his beautiful coat and playful nature. He's a perfect partner for outdoor fun, loved for his loyalty and gentle disposition.</p> 
             <P>Peddie's intelligence and friendly demeanor make him a beloved member of his family and a source of joy for everyone who knows him.</P>
             <h3>Photo Gallery</h3>
-            <img src="images/peddie_play.jpg" width ="200" alt = "Peddie is playing in the snow.">
-            <img src="images/peddie_swim.jpg"  width ="200" alt="Peddie is swimming in a lake.">
-            <img src="images/peddie_sleep.jpg"  width ="200" alt="Peddie loves sleeping on the couch.">
-            <img src="images/peddie_smile.jpg"  width ="200" alt="Peddie is the sweetest in the world.">
+            <div class="grid-container-pets">
+                <img src="images/peddie_play.jpg" width ="200" alt = "Peddie is playing in the snow.">
+                <img src="images/peddie_swim.jpg"  width ="200" alt="Peddie is swimming in a lake.">
+                <img src="images/peddie_sleep.jpg"  width ="200" alt="Peddie loves sleeping on the couch.">
+                <img src="images/peddie_smile.jpg"  width ="200" alt="Peddie is the sweetest in the world.">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Swimming</li>
@@ -110,15 +116,17 @@
         </div>
         <div>
             <h2>Fitz</h2>
-            <img src="images/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table.">
+            <img class="pet-first-pic" src="images/Fitz.jpeg" width = "400" alt="Boston terrier watching a tennis ball at the table.">
 
             <p>Loves chasings tennis balls, chipmunks, squirrels, and birds. Often found sitting by the fire in wintertime, and in sun patches when available. He’s energetic, mischievous, and easily bored. He loves people and gets grumpy if left without a lap too long. </p> 
             <P>Loves barking up trees, running around on the lawn, and digging in the dirt looking for moles. He especially likes getting treats and whines when he comes inside and doesn't get a snack. </P>
             <h3>Photo Gallery</h3>
-            <img src="images/Fitz_standing_on_chair.jpeg" width ="200" alt = "Fitz standing on a wooden chair, looking at the camera. ">
-            <img src="images/Fitz_sleeping.jpeg"  width ="200" alt="Fitz sleeping in a fuzzy dog bed. ">
-            <img src="images/Fitz_on_the_lawn.jpeg"  width ="200" alt="Fitz laying out on the lawn in the grass. ">
-            <img src="images/Fitz_laying_in_bed.jpeg"  width ="200" alt="Fitz sleeping with his face buried in a plaid blanket, only his head is visible. ">
+            <div class="grid-container-pets">
+                <img src="images/Fitz_standing_on_chair.jpeg" width ="200" alt = "Fitz standing on a wooden chair, looking at the camera. ">
+                <img src="images/Fitz_sleeping.jpeg"  width ="200" alt="Fitz sleeping in a fuzzy dog bed. ">
+                <img src="images/Fitz_on_the_lawn.jpeg"  width ="200" alt="Fitz laying out on the lawn in the grass. ">
+                <img src="images/Fitz_laying_in_bed.jpeg"  width ="200" alt="Fitz sleeping with his face buried in a plaid blanket, only his head is visible. ">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Blankets</li>
@@ -129,15 +137,17 @@
         </div>
         <div>
             <h2>Pluto</h2>
-            <img src="images/pluto.jpg" width = "400" alt="White dog looking up.">
+            <img class="pet-first-pic" src="images/pluto.jpg" width = "400" alt="White dog looking up.">
 
             <p>Pluto is a five year old rescue dog of an unknown breed. He was found wandering alone and taken to the Valley Humane Society where he found his new family. From a young age, Pluto always had a special personality, he was known for being very very lazy! He spends most of his time staring out the window to keep watch of his house. Don’t let the laziness fool you because Pluto defends his family from the mailman and squirrels every single day.</p> 
             <P>Aside from his job as defender of the house, Pluto likes to have fun. Pluto’s favorite part of the day is his daily walk. Sometimes he even gets to go to the park and meet his neighbors. He also loves his toy duck, and only his toy duck. As a dog, it's in his nature to hunt and so he makes sure to get some practice with his toy duck.</P>
             <h3>Photo Gallery</h3>
-            <img src="images/pluto_cookie.jpg" width ="200" alt = "Pluto the dog standing up to eat a cookie.">
-            <img src="images/pluto_sleeping.jpg"  width ="200" alt="Pluto sleeping on bed">
-            <img src="images/pluto_walk.jpg"  width ="200" alt="Pluto the dog on a walking trail.">
-            <img src="images/pluto_sitting.jpg"  width ="200" alt="Pluto sitting and posed on top of a table">
+            <div class="grid-container-pets">
+                <img src="images/pluto_cookie.jpg" width ="200" alt = "Pluto the dog standing up to eat a cookie.">
+                <img src="images/pluto_sleeping.jpg"  width ="200" alt="Pluto sleeping on bed">
+                <img src="images/pluto_walk.jpg"  width ="200" alt="Pluto the dog on a walking trail.">
+                <img src="images/pluto_sitting.jpg"  width ="200" alt="Pluto sitting and posed on top of a table">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Eating bone</li>
@@ -148,15 +158,17 @@
         </div>
         <div>
             <h2>Cody</h2>
-            <img src="images/cody.jpg" width = "400" alt="Cody at home.">
+            <img class="pet-first-pic" src="images/cody.jpg" width = "400" alt="Cody at home.">
 
             <p>Cody is a 7yr old Pembroke Corgi. He was born in Cavalier Farms, Seattle. He prefers to spend his days lounging on the bean bag. Every day, he enjoys two walks around the neighborhood and likes to make friends with other doggie friends. If lucky enough, he might see the cyclist, but he is not allowed to give chase.</p> 
             <P>Cody loves traveling. He enjoys walking on the beach and taking sun naps. But he hates cold weather. He would like to stay at home lounging by the fireplace in winter.</P>
             <h3>Photo Gallery</h3>
-            <img src="images/cody_play.jpg" width ="200" alt = "Cody lying on the ground making faces.">
-            <img src="images/cody_deathvalley.jpg"  width ="200" alt="Cody visiting Badwater Basin in Death Valley National Park.">
-            <img src="images/cody_sea.jpg"  width ="200" alt="Cody having a walk by the sea.">
-            <img src="images/cody_fireplace.jpg"  width ="200" alt="Cody lounging by the fireplace in winter.">
+            <div class="grid-container-pets">
+                <img src="images/cody_play.jpg" width ="200" alt = "Cody lying on the ground making faces.">
+                <img src="images/cody_deathvalley.jpg"  width ="200" alt="Cody visiting Badwater Basin in Death Valley National Park.">
+                <img src="images/cody_sea.jpg"  width ="200" alt="Cody having a walk by the sea.">
+                <img src="images/cody_fireplace.jpg"  width ="200" alt="Cody lounging by the fireplace in winter.">
+            </div>
             <h3>Likes</h3>
             <ul>
                 <li>Traveling</li>
