--- a/recipes.html
+++ b/recipes.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Recipes 🥘</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    <div class="skip"><a href = "#main-content">Skip to Main Content</a></div>
     <header>
 		<!-- Nav is a sematic tag page that aids accessibility -->
 		<nav>
 			<ul>
 				<!-- Since I am on the index file I added class = action to the link to index. -->
 				<!-- For this homework leave the class on index for all three pages. -->
-				<li class="active"><a href = "recipes.html">Recipes</a></li>
-				<li><a href = "index.html" >Pets</a></li>
+                <li><a href = "index.html" >Pets</a></li>
+				<li class="active"><a class = "current" href = "recipes.html">Recipes</a></li>
 				<li><a href = "travel.html">Travel</a></li>
 			</ul>
 		</nav>
@@ -23,121 +25,130 @@
 	</header>
    
     <main id="main-content">
-    <div>
-        <h2>Double Chocolate Cookies</h2>
-        <span>Origin: Michigan</span>
-        <span>Source: Family Recipe</span>
-        <span>Category: Dessert</span>
+        <div>
+            <h2>Double Chocolate Cookies</h2>
+            <div class="food-basic-info">
+                <span>Origin: Michigan</span>
+                <span>Source: Family Recipe</span>
+                <span>Category: Dessert</span>
+            </div>
 
-        <img src="images/double_chocolate_cookies.png" width = "400" alt="">
-        <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings.  They are extremely sugary so the salt helps to balance it.  Note, these cookies are best eaten very quickly.</p>
-        <h3>Recipe Ingredients</h3>
-        <ul>
-            <li>Unsalted butter</li>
-            <li>Granulated Sugar</li>
-            <li>Packed light or dark brown sugar</li>
-            <li>Large egg</li>
-            <li>Pure vanilla extract</li>
-            <li>Semi-sweet chocolate chunks (melted)</li>
-            <li>All-purpose flour</li>
-            <li>Natural unsweetened cocoa powder</li>
-            <li>Baking soda</li>
-            <li>Salt</li>
-            <li>Semi-sweet chocolate chunks</li>
-        </ul>
+            <img class="food-first-pic" src="images/double_chocolate_cookies.png" width = "400" alt="">
+            <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to fit the taste buds of her siblings.  They are extremely sugary so the salt helps to balance it.  Note, these cookies are best eaten very quickly.</p>
+            <h3>Recipe Ingredients</h3>
+            <ul>
+                <li>Unsalted butter</li>
+                <li>Granulated Sugar</li>
+                <li>Packed light or dark brown sugar</li>
+                <li>Large egg</li>
+                <li>Pure vanilla extract</li>
+                <li>Semi-sweet chocolate chunks (melted)</li>
+                <li>All-purpose flour</li>
+                <li>Natural unsweetened cocoa powder</li>
+                <li>Baking soda</li>
+                <li>Salt</li>
+                <li>Semi-sweet chocolate chunks</li>
+            </ul>
 
-        <h3>Recipe Steps</h3> 
-        <ol>
-            <li>In a mixing bowl cream together the butter, granulated sugar, and brown sugar</li>
-            <li>Add the egg and vanilla extract and beat well</li>
-            <li>Add the melted chocolate</li>
-            <li>In a separate bowl combine the flour, baking soda, cocoa powder and salt</li>
-            <li>Combine the wet and dry ingredients</li>
-            <li>Add the unmelted chocolate chunks.</li> 
-            <li>Form 15 cookies and place on a baking sheet.</li>
-            <li>Cook for 12 to 13 minutes at 350 degrees.</li>
-        </ol>
+            <h3>Recipe Steps</h3> 
+            <ol>
+                <li>In a mixing bowl cream together the butter, granulated sugar, and brown sugar</li>
+                <li>Add the egg and vanilla extract and beat well</li>
+                <li>Add the melted chocolate</li>
+                <li>In a separate bowl combine the flour, baking soda, cocoa powder and salt</li>
+                <li>Combine the wet and dry ingredients</li>
+                <li>Add the unmelted chocolate chunks.</li> 
+                <li>Form 15 cookies and place on a baking sheet.</li>
+                <li>Cook for 12 to 13 minutes at 350 degrees.</li>
+            </ol>
 
-        <h3>Additional Food images</h3>
-        <img src="images/double_chocolate_chips.png" width = "200" alt="A small pile of chocolate chips">
-        <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chocolate-d9ba778.jpg?quality=90&webp=true&resize=600,545" width = "200" alt="Chocolate melting in a boiler">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG" width = "200" alt="Brown sugar in three different shades of darkness">
+            <h3>Additional Food images</h3>
+            <div class="grid-container-recipe">
+                <img src="images/double_chocolate_chips.png" width = "200" alt="A small pile of chocolate chips">
+                <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chocolate-d9ba778.jpg?quality=90&webp=true&resize=600,545" width = "200" alt="Chocolate melting in a boiler">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG" width = "200" alt="Brown sugar in three different shades of darkness">
+            </div>
+            <!-- Colleen van Lent -->
 
-        <!-- Colleen van Lent -->
+        </div>
+        <div>
+            <h2>Zucchini Fritters</h2>
+            <div class="food-basic-info">
+                <span>Origin: Greece</span>
+                <span>Source: niftyrecipe.com</span>
+                <span>Category: Side dish/main dish</span>
+            </div>
 
-    </div>
-    <div>
-        <h2>Zucchini Fritters</h2>
-        <span>Origin: Greece</span>
-        <span>Source: niftyrecipe.com</span>
-        <span>Category: Side dish/main dish</span>
+            <img class="food-first-pic"src="images/Zucchini_fritters_1.jpeg" width = "400" alt="a plate of zucchini fritters">
+            <p>I found this recipe for zucchini fritters on a food blog when I was looking for quick and easy dishes to make during undergrad. It uses minimal ingredients and can be done in less than half an hour. They're delicious and filling and go great with dipping sauces.</p>
+            <h3>Recipe Ingredients</h3>
+            <ul>
+                <li>Zucchini</li>
+                <li>Egg</li>
+                <li>Packed light or dark brown sugar</li>
+                <li>Flour</li>
+                <li>Vegetable/seed oil</li>
+                <li>Garlic</li>
+                <li>Salt and pepper</li>
+            </ul>
 
-        <img src="images/Zucchini_fritters_1.jpeg" width = "400" alt="a plate of zucchini fritters">
-        <p>I found this recipe for zucchini fritters on a food blog when I was looking for quick and easy dishes to make during undergrad. It uses minimal ingredients and can be done in less than half an hour. They're delicious and filling and go great with dipping sauces.</p>
-        <h3>Recipe Ingredients</h3>
-        <ul>
-            <li>Zucchini</li>
-            <li>Egg</li>
-            <li>Packed light or dark brown sugar</li>
-            <li>Flour</li>
-            <li>Vegetable/seed oil</li>
-            <li>Garlic</li>
-            <li>Salt and pepper</li>
-        </ul>
+            <h3>Recipe Steps</h3> 
+            <ol>
+                <li>Combine eggs, salt, and pepper and whisk</li>
+                <li>Add pressed garlic</li>
+                <li>Grate the zucchini and squeeze the moisture out of it</li>
+                <li>Add zucchini and flour and mix</li>
+                <li>Heat oil in pan and add dollops of batter</li>
+                <li>Serve with or without dipping sauce</li> 
+            </ol>
 
-        <h3>Recipe Steps</h3> 
-        <ol>
-            <li>Combine eggs, salt, and pepper and whisk</li>
-            <li>Add pressed garlic</li>
-            <li>Grate the zucchini and squeeze the moisture out of it</li>
-            <li>Add zucchini and flour and mix</li>
-            <li>Heat oil in pan and add dollops of batter</li>
-            <li>Serve with or without dipping sauce</li> 
-        </ol>
+            <h3>Additional Food images</h3>
+            <div class="grid-container-recipe">
+                <img src="images/Zucchini_fritters_2.jpeg" width = "200" alt="Grated zucchini.">
+                <img src="images/Zucchini_fritters_3.jpeg" width = "200" alt="Ingredients for zucchini fritters combined.">
+                <img src="images/Zucchini_fritters_4.jpg" width = "200" alt="Zucchini fritters in the pan cooking.">
+            </div>
+            <!-- Kay Malan -->
+        </div>
+        <div>
+            <h2>Coca-Cola Chicken Wings</h2>
+            <div class="food-basic-info">
+                <span>Origin: China</span>
+                <span>Source: Family Recipe</span>
+                <span>Category: Main dish</span>
+            </div>
+        
+            <img class="food-first-pic" src="images/coca_cola_chicken_wings.jpg" width = "400" alt="a plate of chicken wings">
+            <p>I learnt how to cook Coca-Cola chicken wings from my mother, and I've since tweaked her recipe to better suit my family's palate, making it less sweet. While the cooking process remains straightforward, the result is incredibly flavorful, and once you've tried it, you'll understand its delicious appeal!</p>
+            <h3>Recipe Ingredients</h3>
+            <ul>
+                <li>Chicken wings</li>
+                <li>Scallions</li>
+                <li>Ginger slices</li>
+                <li>Cooking wine</li>
+                <li>Dark soy sauce</li>
+                <li>A can of coke</li>
+            </ul>
 
-        <h3>Additional Food images</h3>
-        <img src="images/Zucchini_fritters_2.jpeg" width = "200" alt="Grated zucchini.">
-        <img src="images/Zucchini_fritters_3.jpeg" width = "200" alt="Ingredients for zucchini fritters combined.">
-        <img src="images/Zucchini_fritters_4.jpg" width = "200" alt="Zucchini fritters in the pan cooking.">
+            <h3>Recipe Steps</h3> 
+            <ol>
+                <li>Wash and place chicken wings in a bowl</li>
+                <li>Add scallions, ginger slices, cooking wine, dark soy sauce and salt to the washed chicken wings, and mix them well</li>
+                <li>Cover the bowl with plastic wrap and marinate the chicken wings for 1 hour</li>
+                <li>Put the right amount of oil in the pot, and put the marinated chicken wings into the pot and fry it until golden brown on both sides</li>
+                <li>After fry the chicken wings until golden brown on both sides, then pour a can of coke into the pan and bring to a boil</li>
+                <li>Continue to cook for an additional 2-3 minutes until the glaze has thickened and coats the wings nicely</li> 
+                <li>Transfer the Coca-Cola glazed chicken wings to a serving platter</li>
+            </ol>
 
-        <!-- Kay Malan -->
-    </div>
-    <div>
-        <h2>Coca-Cola Chicken Wings</h2>
-        <span>Origin: China</span>
-        <span>Source: Family Recipe</span>
-        <span>Category: Main dish</span>
-
-        <img src="images/coca_cola_chicken_wings.jpg" width = "400" alt="a plate of chicken wings">
-        <p>I learnt how to cook Coca-Cola chicken wings from my mother, and I've since tweaked her recipe to better suit my family's palate, making it less sweet. While the cooking process remains straightforward, the result is incredibly flavorful, and once you've tried it, you'll understand its delicious appeal!</p>
-        <h3>Recipe Ingredients</h3>
-        <ul>
-            <li>Chicken wings</li>
-            <li>Scallions</li>
-            <li>Ginger slices</li>
-            <li>Cooking wine</li>
-            <li>Dark soy sauce</li>
-            <li>A can of coke</li>
-        </ul>
-
-        <h3>Recipe Steps</h3> 
-        <ol>
-            <li>Wash and place chicken wings in a bowl</li>
-            <li>Add scallions, ginger slices, cooking wine, dark soy sauce and salt to the washed chicken wings, and mix them well</li>
-            <li>Cover the bowl with plastic wrap and marinate the chicken wings for 1 hour</li>
-            <li>Put the right amount of oil in the pot, and put the marinated chicken wings into the pot and fry it until golden brown on both sides</li>
-            <li>After fry the chicken wings until golden brown on both sides, then pour a can of coke into the pan and bring to a boil</li>
-            <li>Continue to cook for an additional 2-3 minutes until the glaze has thickened and coats the wings nicely</li> 
-            <li>Transfer the Coca-Cola glazed chicken wings to a serving platter</li>
-        </ol>
-
-        <h3>Additional Food images</h3>
-        <img src="images/chicken_wings_chopsticks.jpg" width = "200" alt="A chicken wing picked up by chopsticks">
-        <img src="images/boils_in_coke.jpg" width = "200" alt="Chicken wings boiled in coke">
-        <img src="images/chicken-wings_and_rice_cake.jpg" width = "200" alt="Coca-cola chicken wings served with rice cake">
-
-        <!-- Sisi Chen -->
-    </div>
+            <h3>Additional Food images</h3>
+            <div class="grid-container-recipe">
+                <img src="images/chicken_wings_chopsticks.jpg" width = "200" alt="A chicken wing picked up by chopsticks">
+                <img src="images/boils_in_coke.jpg" width = "200" alt="Chicken wings boiled in coke">
+                <img src="images/chicken-wings_and_rice_cake.jpg" width = "200" alt="Coca-cola chicken wings served with rice cake">
+            </div>
+            <!-- Sisi Chen -->
+        </div>
     </main>
 </body>
 </html>
